--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "strictNullChecks": false
   },
   "include": [
     "next-env.d.ts",
