--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
+    "antd": "^5.3.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
@@ -41,6 +42,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
+    "react-spring-bottom-sheet": "^3.4.1",
     "react-twitter-widgets": "^1.11.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
