--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx"
-, "context/CalculateABY.js", "context/ethereum.js"  ],
+, "context/CalculateABY.js", "context/ethereum.js", "hooks/useFetch.js"  ],
   "exclude": [
     "node_modules"
   ]
