--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@alch/alchemy-web3": "^1.4.7",
     "@artsy/fresnel": "^6.1.0",
     "@crowdin/crowdin-api-client": "^1.21.2",
-    "@ethersproject/providers": "^5.7.2",
     "@headlessui/react": "^1.4.2",
     "@heroicons/react": "^1.0.5",
     "@metamask/detect-provider": "^2.0.0",
+    "@thirdweb-dev/chains": "^0.1.10",
+    "@thirdweb-dev/react": "^3.11.4",
+    "@thirdweb-dev/sdk": "^3.10.7",
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "@web3-react/walletconnect-connector": "^6.2.13",
@@ -32,6 +34,7 @@
     "chart.js": "^4.2.1",
     "dotenv": "^16.0.3",
     "dotenv-load": "^2.0.1",
+    "ethers": "^5.7.2",
     "js-cookie": "^3.0.1",
     "next": "^13.2.1",
     "next-auth": "^4.19.2",
