--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "eslint": "^8.34.0",
+    "eslint-config-next": "^13.3.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-prettier": "^4.2.1",
