--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
     "styled-components": "^5.3.6",
+    "sweetalert2": "^11.7.3",
     "tailwindcss": "^3.2.7",
     "web3": "^1.8.2"
   },
